<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="layer_keyboard_keyname_hide">hide</string>
    <string name="layer_keyboard_keyname_enter">enter</string>
    <string name="layer_keyboard_keyname_del">del</string>
    <string name="layer_keyboard_keyname_caps">caps</string>
    <string name="layer_keyboard_keyname_input_type_latter">Abc</string>
    <string name="layer_keyboard_keyname_input_type_number">123</string>
    <string name="layer_keyboard_keyname_input_type_symbol">>_</string>

    <string name="layer_keyboard_keyname_0">0</string>
    <string name="layer_keyboard_keyname_1">1</string>
    <string name="layer_keyboard_keyname_2">2</string>
    <string name="layer_keyboard_keyname_3">3</string>
    <string name="layer_keyboard_keyname_4">4</string>
    <string name="layer_keyboard_keyname_5">5</string>
    <string name="layer_keyboard_keyname_6">6</string>
    <string name="layer_keyboard_keyname_7">7</string>
    <string name="layer_keyboard_keyname_8">8</string>
    <string name="layer_keyboard_keyname_9">9</string>

    <string name="layer_keyboard_keyname_a">a</string>
    <string name="layer_keyboard_keyname_b">b</string>
    <string name="layer_keyboard_keyname_c">c</string>
    <string name="layer_keyboard_keyname_d">d</string>
    <string name="layer_keyboard_keyname_e">e</string>
    <string name="layer_keyboard_keyname_f">f</string>
    <string name="layer_keyboard_keyname_g">g</string>
    <string name="layer_keyboard_keyname_h">h</string>
    <string name="layer_keyboard_keyname_i">i</string>
    <string name="layer_keyboard_keyname_j">j</string>
    <string name="layer_keyboard_keyname_k">k</string>
    <string name="layer_keyboard_keyname_l">l</string>
    <string name="layer_keyboard_keyname_m">m</string>
    <string name="layer_keyboard_keyname_n">n</string>
    <string name="layer_keyboard_keyname_o">o</string>
    <string name="layer_keyboard_keyname_p">p</string>
    <string name="layer_keyboard_keyname_q">q</string>
    <string name="layer_keyboard_keyname_r">r</string>
    <string name="layer_keyboard_keyname_s">s</string>
    <string name="layer_keyboard_keyname_t">t</string>
    <string name="layer_keyboard_keyname_u">u</string>
    <string name="layer_keyboard_keyname_v">v</string>
    <string name="layer_keyboard_keyname_w">w</string>
    <string name="layer_keyboard_keyname_x">x</string>
    <string name="layer_keyboard_keyname_y">y</string>
    <string name="layer_keyboard_keyname_z">z</string>

    <string name="layer_keyboard_keyname_space">&#160;</string>
    <string name="layer_keyboard_keyname_line_feed">\n</string>

    <string name="layer_keyboard_keyname_dot">.</string>
    <string name="layer_keyboard_keyname_comma">,</string>
    <string name="layer_keyboard_keyname_add">+</string>
    <string name="layer_keyboard_keyname_subtract">-</string>
    <string name="layer_keyboard_keyname_star">*</string>
    <string name="layer_keyboard_keyname_slash">/</string>
    <string name="layer_keyboard_keyname_exclamation">!</string>
    <string name="layer_keyboard_keyname_question">\?</string>
    <string name="layer_keyboard_keyname_colon">:</string>
    <string name="layer_keyboard_keyname_semicolon">;</string>
    <string name="layer_keyboard_keyname_single_quote">\'</string>
    <string name="layer_keyboard_keyname_double_quote">\"</string>
    <string name="layer_keyboard_keyname_back_quote">`</string>
    <string name="layer_keyboard_keyname_equal">=</string>
    <string name="layer_keyboard_keyname_backslash">\\</string>
    <string name="layer_keyboard_keyname_bar">|</string>
    <string name="layer_keyboard_keyname_underline">_</string>
    <string name="layer_keyboard_keyname_dollar">&#036;</string>
    <string name="layer_keyboard_keyname_rmb">￥</string>
    <string name="layer_keyboard_keyname_at">\@</string>
    <string name="layer_keyboard_keyname_pound">&#035;</string>
    <string name="layer_keyboard_keyname_percent">&#037;</string>
    <string name="layer_keyboard_keyname_and">&amp;</string>
    <string name="layer_keyboard_keyname_caret">^</string>
    <string name="layer_keyboard_keyname_tilde">~</string>
    <string name="layer_keyboard_keyname_ellipsis">&#8230;</string>
    <string name="layer_keyboard_keyname_left_braces">{</string>
    <string name="layer_keyboard_keyname_right_braces">}</string>
    <string name="layer_keyboard_keyname_left_brackets">[</string>
    <string name="layer_keyboard_keyname_right_brackets">]</string>
    <string name="layer_keyboard_keyname_left_parentheses">(</string>
    <string name="layer_keyboard_keyname_right_parentheses">)</string>
    <string name="layer_keyboard_keyname_less_than">&lt;</string>
    <string name="layer_keyboard_keyname_greater_than">&gt;</string>
</resources>